src/test/deca/context/valid/cast-simpleExamples.deca
class A {
}

class B extends A {
}

class C extends B {
}

class D extends A {
}

{
    A a;
    B b;
    C c;
    D d;
    (A) (c);
    (D) (a);
    (B) (b);
    (Object) (d);
}
