src/test/deca/context/invalid/method-lessParamThatSuper.deca
class A{
	void a(int a){}
}

class B extends A{
	void a(){}
}

